[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Quiz.gd" type="Script" id=1]
[ext_resource path="res://Assets/img/Repeating-Triangles.png" type="Texture" id=2]
[ext_resource path="res://Assets/fonts/Roboto-Medium.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Back.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
size = 38
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=2]
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 3 )

[node name="Quiz_sejarah" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
modulate = Color( 0.615686, 0.0666667, 0.0666667, 1 )
position = Vector2( 533.228, 527.104 )
scale = Vector2( 4.35665, 5.41391 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = 25.0
margin_right = 603.0
margin_bottom = 632.0
color = Color( 0.580392, 0.435294, 0.435294, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 6.0
margin_top = 49.7465
margin_right = 569.0
margin_bottom = 601.746
color = Color( 0.427451, 0.176471, 0.176471, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Soal" type="Node2D" parent="."]
editor/display_folded = true

[node name="1" type="Label" parent="Soal"]
margin_left = 17.0
margin_top = 49.191
margin_right = 563.0
margin_bottom = 597.191
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_lock_": true
}

[node name="Options" type="Node2D" parent="."]
editor/display_folded = true

[node name="A" type="Button" parent="Options"]
margin_left = 38.0
margin_top = 666.0
margin_right = 529.0
margin_bottom = 750.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
clip_text = true

[node name="B" type="Button" parent="Options"]
margin_left = 43.0
margin_top = 785.0
margin_right = 530.0
margin_bottom = 869.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
clip_text = true

[node name="C" type="Button" parent="Options"]
margin_left = 43.0
margin_top = 907.0
margin_right = 530.0
margin_bottom = 991.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
clip_text = true

[node name="Label" type="Label" parent="."]
margin_left = 79.0
margin_top = 134.0
margin_right = 506.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 4 )
text = "SELAMAT
JAWABAN ANDA"
align = 1
autowrap = true

[node name="Label2" type="Label" parent="."]
margin_left = 75.2051
margin_top = 278.202
margin_right = 502.205
margin_bottom = 440.202
custom_fonts/font = SubResource( 4 )
align = 1
autowrap = true

[node name="Back" parent="." instance=ExtResource( 4 )]
visible = false
[connection signal="pressed" from="Options/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="Options/B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="Options/C" to="." method="_on_C_pressed"]
